# projet-histogrammes-3d

./: .gitignore  CMakeLists.txt  Makefile  MathVect.cpp  MathVect.h  MathVect.hpp  Model.cpp  Model.h  Model.hpp  Plane.cpp  Plane.h  Plane.hpp  Point.cpp  Point.h  Point.hpp  README.md  Shape3D.cpp  Shape3D.hpp  compare.cpp  compare.hpp  main.cpp  parse_database.sh  shapes.cpp  shapes.hpp  utility_funcs.cpp  utility_funcs.hpp
process_off/: CMakeLists.txt  MathVect.cpp  MathVect.hpp  Model.cpp  Model.hpp  compare.cpp  compare.hpp  main.cpp  shapes.cpp  shapes.hpp
recognition/: compare.py  compare.sh  confusion_matrix.sh  find_best.sh
stat_algorithms/: produce_bar_plot.R  produce_bar_plot_normalized.R  produce_bar_plot_values.R
